--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,7 +1,78 @@
+@font-face {
+  font-family: "imb";
+  src: url("../../media/imb-plex-sans.ttf") format("truetype");
+}
+@font-face {
+  font-family: "light";
+  src: url(../../media/light.ttf) format("truetype");
+}
 body {
-  font-family: sans-serif;
+  font-family: imb;
 }
 
-h1 {
-  font-weight: bolder;
+.top {
+  text-align: center;
+  border: 1px solid transparent;
+  margin-top: 2rem;
+}
+.top h1 {
+  font-weight: bold;
+  font-size: 50px;
+  margin-top: 0;
+}
+.top p {
+  font-weight: bold;
+  color: #b3b3b3;
+  text-transform: uppercase;
+  margin-bottom: 0;
+}
+
+section {
+  width: 85vw;
+  margin: auto;
+}
+
+.container .line {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 0.5px;
+  background-color: #c3c3c3;
+}
+.container .question-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 1rem;
+  margin: 0;
+}
+.container .question-container:hover {
+  cursor: pointer;
+  background-color: #e3eafd;
+}
+.container .question-container h3 {
+  padding: 0;
+  margin: 0;
+  font-weight: 500;
+  font-size: 1.25rem;
+}
+.container .question-container .drop-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  color: #004cff;
+}
+.container .answer {
+  padding: 1rem;
+  padding-bottom: 3rem;
+  margin: 0;
+  display: none;
+}
+.container .answer p {
+  margin: 0;
+  padding: 0;
+  font-size: 1rem;
 }/*# sourceMappingURL=style.css.map */
