--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -60,6 +60,8 @@ section {
 }
 
 .container {
+	// border: 1px solid red;
+
 	.line {
 		margin: 0;
 		padding: 0;
@@ -97,7 +99,7 @@ section {
 		padding: 1rem;
 		padding-bottom: 3rem;
 		margin: 0;
-		display: none;
+		// display: none;
 		// font-family: light;
 
 		p {
