--- a/weather/src/styles/style.css
+++ b/weather/src/styles/style.css
@@ -1,1 +1,42 @@
-/*# sourceMappingURL=style.css.map */
+body {
+  padding: 0;
+  margin: 0;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  height: 100vh;
+  color: #e7e7eb;
+  font-family: "Poppins", serif;
+}
+
+#sidebar {
+  background-color: #1e213a;
+}
+
+.sidebar .top {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 2rem;
+}
+.sidebar .top button {
+  background-color: #6e707a;
+  color: #e7e7eb;
+  border: 0;
+  cursor: pointer;
+  font-family: "Poppins", serif;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.2509803922);
+}
+.sidebar .top button.places {
+  padding: 0.5rem 1rem;
+  font-size: 16px;
+  line-height: 19px;
+}
+.sidebar .top button.current {
+  border-radius: 50%;
+  height: 40px;
+  width: 40px;
+  text-align: center;
+  vertical-align: middle;
+}/*# sourceMappingURL=style.css.map */
