--- a/weather/src/styles/style.scss
+++ b/weather/src/styles/style.scss
@@ -156,4 +156,20 @@ body {
 			font-size: 3px;
 		}
 	}
+
+	.location {
+		position: absolute;
+		left: 50%;
+		transform: translate(-50%);
+		bottom: 40px;
+		font-size: 14px;
+
+		i {
+			margin-right: 0.5rem;
+		}
+
+		* {
+			color: $small-text;
+		}
+	}
 }
