--- a/weather/src/styles/style.css
+++ b/weather/src/styles/style.css
@@ -12,8 +12,11 @@ body {
   display: grid;
   grid-template-columns: 1fr 2fr;
   height: 100vh;
+  width: 100vw;
   color: #e7e7eb;
   font-family: "Raleway", serif;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 #sidebar {
@@ -137,4 +140,78 @@ body {
 }
 .sidebar .location * {
   color: #88869d;
+}
+
+.search-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.search-container .fa-xmark {
+  align-self: flex-end;
+  margin: 2rem;
+  cursor: pointer;
+}
+.search-container form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 0.75rem;
+  margin-bottom: 3rem;
+  width: calc(100% - 6rem);
+  height: 2.5rem;
+  font-size: 14px;
+}
+.search-container form .bar {
+  border: 1px solid #e7e7eb;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  justify-content: flex-start;
+  gap: 0.75rem;
+  padding-right: 1rem;
+}
+.search-container form .bar * {
+  color: #616475;
+}
+.search-container form .bar .search {
+  background-color: transparent;
+  width: 100%;
+  border: none;
+  outline: none;
+}
+.search-container form .bar .search:focus {
+  color: #e7e7eb;
+}
+.search-container form .bar i {
+  padding-left: 0.5rem;
+  font-size: 16px;
+}
+.search-container form input {
+  border-radius: 0;
+}
+.search-container form .submit {
+  cursor: pointer;
+  background-color: #3c47e9;
+  border: none;
+  height: 100%;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+@media only screen and (max-width: 846px) {
+  body {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media only screen and (max-width: 573px) {
+  body {
+    grid-template-columns: 1fr;
+  }
 }/*# sourceMappingURL=style.css.map */
