--- a/weather/src/styles/style.scss
+++ b/weather/src/styles/style.scss
@@ -36,8 +36,11 @@ body {
 	display: grid;
 	grid-template-columns: 1fr 2fr;
 	height: 100vh;
+	width: 100vw;
 	color: $white;
 	font-family: "Raleway", serif;
+	overflow-x: hidden;
+	overflow-y: auto;
 }
 
 // ============
@@ -171,5 +174,84 @@ body {
 		* {
 			color: $small-text;
 		}
+	}
+}
+
+// search
+
+.search-container {
+	@include flexCenter(column);
+
+	.fa-xmark {
+		align-self: flex-end;
+		margin: 2rem;
+		cursor: pointer;
+	}
+
+	form {
+		@include flexCenter(row);
+		justify-content: space-between;
+		gap: 0.75rem;
+		margin-bottom: 3rem;
+		width: calc(100% - 6rem);
+		height: 2.5rem;
+		font-size: 14px;
+
+		.bar {
+			border: 1px solid $white;
+			width: 100%;
+			height: 100%;
+			@include flexCenter(row);
+			justify-content: flex-start;
+			gap: 0.75rem;
+			padding-right: 1rem;
+
+			* {
+				color: $search-border;
+			}
+
+			.search {
+				background-color: transparent;
+				width: 100%;
+				border: none;
+				outline: none;
+
+				&:focus {
+					color: $white;
+				}
+			}
+
+			i {
+				padding-left: 0.5rem;
+				font-size: 16px;
+			}
+		}
+
+		input {
+			border-radius: 0;
+		}
+
+		.submit {
+			cursor: pointer;
+			background-color: $search;
+			border: none;
+			height: 100%;
+			padding-left: 1rem;
+			padding-right: 1rem;
+		}
+	}
+
+	
+}
+
+@media only screen and (max-width: 846px) {
+	body {
+		grid-template-columns: 1fr 1fr;
+	}
+}
+
+@media only screen and (max-width: 573px) {
+	body {
+		grid-template-columns: 1fr;
 	}
 }
