--- a/weather/src/styles/style.css
+++ b/weather/src/styles/style.css
@@ -160,7 +160,7 @@ body {
   flex-direction: row;
   justify-content: space-between;
   gap: 0.75rem;
-  margin-bottom: 3rem;
+  margin-bottom: 2.5rem;
   width: calc(100% - 6rem);
   height: 2.5rem;
   font-size: 14px;
@@ -190,7 +190,7 @@ body {
   color: #e7e7eb;
 }
 .search-container form .bar i {
-  padding-left: 0.5rem;
+  padding-left: 0.75rem;
   font-size: 16px;
 }
 .search-container form input {
@@ -203,6 +203,41 @@ body {
   height: 100%;
   padding-left: 1rem;
   padding-right: 1rem;
+}
+.search-container ul {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  list-style-type: none;
+  width: calc(100% - 6rem);
+  gap: 1rem;
+  overflow: scroll;
+}
+.search-container ul button {
+  all: unset;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+  font-size: 14px;
+  padding: 0.75rem;
+  height: 3.5rem;
+  cursor: pointer;
+}
+.search-container ul button i {
+  color: #616475;
+  font-size: 12px;
+  visibility: hidden;
+}
+.search-container ul button:hover {
+  border: 1px solid #616475;
+}
+.search-container ul button:hover i {
+  visibility: visible;
 }
 
 @media only screen and (max-width: 846px) {
