added fixed height of ul

--- a/weather/src/styles/style.css
+++ b/weather/src/styles/style.css
@@ -209,10 +209,11 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  justify-content: flex-start;
   list-style-type: none;
   width: calc(100% - 6rem);
   gap: 1rem;
-  overflow: scroll;
+  overflow-y: auto;
 }
 .search-container ul button {
   all: unset;
@@ -225,7 +226,7 @@ body {
   width: 100%;
   font-size: 14px;
   padding: 0.75rem;
-  height: 3.5rem;
+  min-height: 3.5rem;
   cursor: pointer;
 }
 .search-container ul button i {
