--- a/weather/src/styles/style.scss
+++ b/weather/src/styles/style.scss
@@ -43,6 +43,12 @@ body {
 	overflow-y: auto;
 }
 
+button {
+	all: unset;
+	box-sizing: border-box;
+	cursor: pointer;
+}
+
 // ============
 // side bar
 
@@ -63,7 +69,6 @@ body {
 			background-color: $grey;
 			color: $white;
 			border: 0;
-			cursor: pointer;
 			box-shadow: 0px 4px 4px 0px #00000040;
 
 			&:hover {
@@ -74,11 +79,9 @@ body {
 				padding: 0.5rem 1rem;
 				font-size: 16px;
 				line-height: 19px;
-				cursor: pointer;
 			}
 
 			&.current {
-				cursor: pointer;
 				border-radius: 50%;
 				height: 40px;
 				width: 40px;
@@ -250,15 +253,12 @@ body {
 		overflow-y: auto;
 
 		button {
-			all: unset;
-			box-sizing: border-box;
 			@include flexCenter(row);
 			justify-content: space-between;
 			width: 100%;
 			font-size: 14px;
 			padding: 0.75rem;
 			min-height: 3.5rem;
-			cursor: pointer;
 
 			i {
 				color: $search-border;
@@ -286,5 +286,38 @@ body {
 @media only screen and (max-width: 573px) {
 	body {
 		grid-template-columns: 1fr;
+	}
+}
+
+// ================
+// MAIN
+// ================
+
+.main {
+	height: 100vh;
+	width: 100%;
+	background-color: $dark;
+
+	.btns {
+		position: absolute;
+		top: 2rem;
+		right: 3rem;
+
+		button {
+			border-radius: 50%;
+			background-color: grey;
+			width: 35px;
+			height: 35px;
+			text-align: center;
+			font-weight: bold;
+
+			&:hover {
+				background-color: $light-grey;
+			}
+
+			&.c {
+				margin-right: 1rem;
+			}
+		}
 	}
 }
