--- a/weather/src/styles/style.css
+++ b/weather/src/styles/style.css
@@ -245,7 +245,7 @@ ul {
   visibility: visible;
 }
 
-@media only screen and (max-width: 846px) {
+@media only screen and (max-width: 947px) {
   body {
     grid-template-columns: 1fr 1fr;
   }
@@ -325,12 +325,47 @@ main ul li .temp .min i {
 
 @media only screen and (max-width: 1135px) {
   main ul {
-    grid-template-columns: repeat(3, 110px);
-    gap: 2rem;
+    grid-template-columns: repeat(5, 100px);
   }
 }
-@media only screen and (max-width: 846px) {
+@media only screen and (max-width: 1065px) {
   main ul {
-    grid-template-columns: repeat(3, 110px);
+    grid-template-columns: repeat(5, 90px);
+  }
+}
+@media only screen and (max-width: 1005px) {
+  main ul {
+    grid-template-columns: repeat(5, 80px);
+  }
+  main ul li {
+    height: 140px;
+  }
+}
+@media only screen and (max-width: 947px) {
+  .main {
+    padding: 5rem;
+  }
+  main ul {
+    grid-template-columns: repeat(5, 70px);
+    gap: 10px;
+  }
+  main ul li {
+    height: 130px;
+  }
+}
+@media only screen and (max-width: 573px) {
+  .btns {
+    display: none;
+  }
+  .main {
+    padding: 4rem;
+  }
+  main ul {
+    grid-template-columns: repeat(2, 110px);
+    justify-content: center;
+    gap: 2rem;
+  }
+  main ul li {
+    height: 150px;
   }
 }/*# sourceMappingURL=style.css.map */
