--- a/weather/src/styles/style.scss
+++ b/weather/src/styles/style.scss
@@ -302,12 +302,12 @@ ul {
 	width: 100%;
 	background-color: $dark;
 	position: relative;
-	padding: 6rem;
+	padding: 5rem;
 
 	.btns {
 		position: absolute;
-		top: 2rem;
-		right: 6rem;
+		top: 1.5rem;
+		right: 5rem;
 
 		button {
 			border-radius: 50%;
@@ -324,11 +324,11 @@ ul {
 }
 
 main {
-	border: 1px solid red;
+	// border: 1px solid red;
 	width: 100%;
 	height: 100%;
 
-	ul {
+	.daily {
 		display: grid;
 		grid-template-columns: repeat(5, 110px);
 		justify-content: space-between;
@@ -353,6 +353,8 @@ main {
 				@include flexCenter(row);
 				gap: 1rem;
 				justify-content: space-between;
+				font-size: 14px;
+
 				i {
 					font-style: normal;
 				}
@@ -368,7 +370,7 @@ main {
 
 @media only screen and (max-width: 1135px) {
 	main {
-		ul {
+		.daily {
 			grid-template-columns: repeat(5, 100px);
 		}
 	}
@@ -376,7 +378,7 @@ main {
 
 @media only screen and (max-width: 1065px) {
 	main {
-		ul {
+		.daily {
 			grid-template-columns: repeat(5, 90px);
 		}
 	}
@@ -384,7 +386,7 @@ main {
 
 @media only screen and (max-width: 1005px) {
 	main {
-		ul {
+		.daily {
 			grid-template-columns: repeat(5, 80px);
 			li {
 				height: 140px;
@@ -399,7 +401,7 @@ main {
 	}
 
 	main {
-		ul {
+		.daily {
 			grid-template-columns: repeat(5, 70px);
 			gap: 10px;
 			li {
@@ -419,13 +421,69 @@ main {
 	}
 
 	main {
-		ul {
+		.daily {
 			grid-template-columns: repeat(2, 110px);
 			justify-content: center;
 			gap: 2rem;
 
 			li {
 				height: 150px;
+			}
+		}
+	}
+}
+
+// today's highlights
+
+main {
+	h1 {
+		margin: 1.5rem 0 1rem 0;
+		font-size: 22px;
+	}
+
+	.highlights {
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+		gap: 1.5rem;
+
+		li {
+			background-color: $main;
+			@include flexCenter(column);
+			gap: 0.5rem;
+			padding: 1rem;
+
+			.value {
+				@include flexCenter(row);
+				strong {
+					font-size: 40px;
+				}
+				span {
+					font-size: 25px;
+				}
+			}
+
+			&.wind-status .direction {
+				@include flexCenter(row);
+				gap: 1rem;
+				.icon {
+					width: 20px;
+					height: 20px;
+					border-radius: 50%;
+					background: rgba(255, 255, 255, 0.3);
+					@include flexCenter(row);
+				}
+			}
+
+			&.humidity .bar {
+				width: calc(100% - 2rem);
+				background-color: $white;
+				border-radius: 50px;
+
+				.inside-bar {
+					background-color: $yellow;
+					height: 8px;
+					border-radius: 50px;
+				}
 			}
 		}
 	}
