--- a/weather/src/styles/style.scss
+++ b/weather/src/styles/style.scss
@@ -297,6 +297,11 @@ ul {
 // MAIN
 // ================
 
+#main {
+	height: 100%;
+	background-color: $dark;
+}
+
 .main {
 	height: 100vh;
 	width: 100%;
@@ -418,6 +423,7 @@ main {
 
 	.main {
 		padding: 4rem;
+		height: 100%;
 	}
 
 	main {
@@ -449,7 +455,7 @@ main {
 		li {
 			background-color: $main;
 			@include flexCenter(column);
-			gap: 0.5rem;
+			gap: 0.25rem;
 			padding: 1rem;
 
 			.value {
@@ -459,18 +465,6 @@ main {
 				}
 				span {
 					font-size: 25px;
-				}
-			}
-
-			&.wind-status .direction {
-				@include flexCenter(row);
-				gap: 1rem;
-				.icon {
-					width: 20px;
-					height: 20px;
-					border-radius: 50%;
-					background: rgba(255, 255, 255, 0.3);
-					@include flexCenter(row);
 				}
 			}
 
@@ -484,6 +478,22 @@ main {
 					height: 8px;
 					border-radius: 50px;
 				}
+			}
+		}
+	}
+}
+
+@media only screen and (max-width: 573px) {
+	main {
+		h1 {
+			margin: 3rem 0 1.5rem 0;
+		}
+
+		.highlights {
+			grid-template-columns: 1fr;
+
+			li {
+				padding: 2rem;
 			}
 		}
 	}
