--- a/quiz/src/styles/styles.css
+++ b/quiz/src/styles/styles.css
@@ -30,6 +30,76 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+}
+
+section.quiz {
+  background-color: #fff;
+  padding: 3rem 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 1rem;
+  position: relative;
+  border-radius: 24px;
+  width: 375px;
+}
+section.quiz h1 {
+  text-transform: uppercase;
+  position: absolute;
+  top: -40px;
+  left: 0;
+  color: #f2f2f2;
+  font-weight: 700;
+  font-size: 30px;
+}
+section.quiz img {
+  position: absolute;
+  top: -50px;
+  right: 0;
+  width: 100px;
+}
+section.quiz h2 {
+  color: #2f527b;
+  font-size: 20px;
+  font-weight: 700;
+  align-self: flex-start;
+}
+section.quiz .options {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 1rem;
+  width: 100%;
+}
+section.quiz .options button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  justify-content: flex-start;
+  border-radius: 12px;
+  border: 1px solid #6066d0;
+  width: 100%;
+  height: 2.5rem;
+  color: #6066d0;
+}
+section.quiz .options button:hover {
+  background-color: #f9a826;
+  border-color: #f9a826;
+  color: #fff;
+}
+section.quiz .options button .letter {
+  margin-right: 2rem;
+  font-size: 18px;
+}
+section.quiz .options button .answer {
+  font-size: 14px;
 }
 
 footer {
