--- a/quiz/src/styles/styles.scss
+++ b/quiz/src/styles/styles.scss
@@ -1,10 +1,17 @@
-$white-text: #f2f2f2;
+$white-text: #f2f2f2; //
 $blue-text: #6066d0;
-$yellow: #f9a826;
+$yellow: #f9a826; //
 $green: #60bf88;
 $red: #ea8282;
-$capital: #2f527b;
+$title: #2f527b;
 $results: #1d355d;
+
+@mixin flexCenter($direction) {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: $direction;
+}
 
 * {
 	box-sizing: border-box;
@@ -39,6 +46,76 @@ body {
 	background-repeat: no-repeat;
 	background-size: cover;
 	color: #fff;
+	@include flexCenter(row);
+}
+
+// ==============
+// quiz
+// ==============
+
+section.quiz {
+	background-color: #fff;
+	padding: 3rem 2rem;
+	@include flexCenter(column);
+	gap: 1rem;
+	position: relative;
+	border-radius: 24px;
+	width: 375px;
+
+	h1 {
+		text-transform: uppercase;
+		position: absolute;
+		top: -40px;
+		left: 0;
+		color: $white-text;
+		font-weight: 700;
+		font-size: 30px;
+	}
+
+	img {
+		position: absolute;
+		top: -50px;
+		right: 0;
+		width: 100px;
+	}
+
+	h2 {
+		color: $title;
+		font-size: 20px;
+		font-weight: 700;
+		align-self: flex-start;
+	}
+
+	.options {
+		@include flexCenter(column);
+		gap: 1rem;
+		width: 100%;
+
+		button {
+			@include flexCenter(row);
+			justify-content: flex-start;
+			border-radius: 12px;
+			border: 1px solid $blue-text;
+			width: 100%;
+			height: 2.5rem;
+			color: $blue-text;
+
+			&:hover {
+				background-color: $yellow;
+				border-color: $yellow;
+				color: #fff;
+			}
+
+			.letter {
+				margin-right: 2rem;
+				font-size: 18px;
+			}
+
+			.answer {
+				font-size: 14px;
+			}
+		}
+	}
 }
 
 // ==============
