--- a/quiz/src/styles/styles.scss
+++ b/quiz/src/styles/styles.scss
@@ -117,6 +117,17 @@ section.quiz {
 			}
 		}
 	}
+
+	.next {
+		align-self: flex-end;
+		background-color: $yellow;
+		color: #fff;
+		border: 0;
+		box-shadow: 0px 2px 4px rgba(252, 168, 47, 0.4);
+		border-radius: 12px;
+		height: 2.5rem;
+		padding: 2rem;
+	}
 }
 
 // ==============
