--- a/quiz/src/styles/styles.css
+++ b/quiz/src/styles/styles.css
@@ -82,8 +82,8 @@ section.quiz .options button {
   justify-content: center;
   align-items: center;
   flex-direction: row;
-  justify-content: flex-start;
-  border-radius: 12px;
+  justify-content: space-between;
+  border-radius: 10px;
   border: 1px solid #6066d0;
   width: 100%;
   height: 2.5rem;
@@ -107,9 +107,10 @@ section.quiz .next {
   color: #fff;
   border: 0;
   box-shadow: 0px 2px 4px rgba(252, 168, 47, 0.4);
-  border-radius: 12px;
+  border-radius: 10px;
   height: 2.5rem;
-  padding: 2rem;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 
 footer {
