--- a/quiz/src/styles/styles.scss
+++ b/quiz/src/styles/styles.scss
@@ -56,11 +56,9 @@ body {
 #root {
 	background-color: #fff;
 	padding: 3rem 2rem;
-	@include flexCenter(column);
-	gap: 1rem;
-	position: relative;
 	border-radius: 24px;
 	width: 360px;
+	position: relative;
 
 	h1 {
 		text-transform: uppercase;
@@ -76,6 +74,9 @@ body {
 // QUESTIONS
 
 .quiz {
+	@include flexCenter(column);
+	gap: 1rem;
+
 	img.svg {
 		position: absolute;
 		top: -60px;
@@ -86,7 +87,6 @@ body {
 	h2 {
 		color: $title;
 		font-size: 18px;
-		// font-weight: 700;
 		font-weight: 900;
 		align-self: flex-start;
 	}
@@ -95,8 +95,7 @@ body {
 		align-self: flex-start;
 		width: 60px;
 		border-radius: 4px;
-		// box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.1);
-		filter: drop-shadow(0px 4px 24px rgba(0, 0, 0, 0.1));
+		box-shadow: 4px 8px 24px rgba(0, 0, 0, 0.1);
 	}
 
 	.options {
@@ -150,6 +149,41 @@ body {
 // RESULTS
 .results {
 	color: $results;
+	@include flexCenter(column);
+	gap: 0;
+
+	h2 {
+		font-weight: 900;
+		font-size: 35px;
+		padding-bottom: 0;
+	}
+
+	p i {
+		color: $green;
+		font-size: 25px;
+		font-weight: bold;
+	}
+
+	img {
+		width: 175px;
+		margin-bottom: 2rem;
+	}
+
+	button {
+		margin-top: 1rem;
+		border: 1.5px solid $results;
+		font-size: 13px;
+		font-weight: 600;
+		width: 150px;
+		height: 2.5rem;
+		color: $results;
+
+		&:hover {
+			background-color: $yellow;
+			border-color: $yellow;
+			// color: #fff;
+		}
+	}
 }
 
 // ==============
