--- a/github-jobs/src/styles/style.css
+++ b/github-jobs/src/styles/style.css
@@ -1,1 +1,83 @@
-/*# sourceMappingURL=style.css.map */
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: "Roboto", sans-serif;
+}
+
+button {
+  all: unset;
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "Poppins", sans-serif;
+}
+
+.title {
+  position: absolute;
+  left: 5rem;
+  font-weight: normal;
+}
+.title i {
+  font-weight: bold;
+}
+
+#root {
+  padding: 5rem;
+  width: 100%;
+}
+
+.search-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  width: 100%;
+  background: url(../media/backgroundImg.png);
+  padding: 2.5rem;
+  border-radius: 10px;
+}
+.search-container .search-bar {
+  height: 2.5rem;
+  width: calc(100% - 300px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 1rem;
+  background-color: #fff;
+  padding: 0.5rem;
+}
+.search-container .search-bar ::-moz-placeholder {
+  color: #b9bdcf;
+}
+.search-container .search-bar ::placeholder {
+  color: #b9bdcf;
+}
+.search-container .search-bar i {
+  color: #b9bdcf;
+}
+.search-container .search-bar .search {
+  height: 2rem;
+  width: 100%;
+  border: none;
+  font-size: 14px;
+}
+.search-container .search-bar .search:focus {
+  outline: none;
+  border: none;
+}
+.search-container .search-bar input[type=submit] {
+  background-color: #1e86ff;
+  color: #fff;
+  height: 2rem;
+  width: 150px;
+  font-size: 14px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}/*# sourceMappingURL=style.css.map */
