--- a/github-jobs/src/styles/style.css
+++ b/github-jobs/src/styles/style.css
@@ -2,6 +2,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  color: #334680;
 }
 
 button {
@@ -17,11 +18,18 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Poppins", sans-serif;
+  color: #334680;
 }
 
 #root {
   padding: 4rem;
   width: 100%;
+}
+
+main {
+  display: grid;
+  grid-template-columns: 300px 1fr;
+  gap: 2rem;
 }
 
 .title {
@@ -34,6 +42,7 @@ body {
 }
 .title i {
   font-weight: bold;
+  color: #282538;
 }
 
 .search-container {
@@ -90,4 +99,41 @@ body {
   border: none;
   border-radius: 4px;
   cursor: pointer;
+}
+
+.sidebar {
+  margin-top: 2rem;
+}
+.sidebar input {
+  margin: 0 0.75rem;
+  transform: scale(1.25);
+}
+.sidebar label {
+  font-size: 14px;
+  font-weight: 500;
+}
+.sidebar h2 {
+  text-transform: uppercase;
+  color: #b9bdcf;
+  margin: 1rem 0 0.5rem 0;
+  font-size: 16px;
+}
+.sidebar .full-time,
+.sidebar li {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  justify-content: flex-start;
+}
+.sidebar .search input {
+  font-size: 15px;
+  margin: 0;
+  transform: scale(1);
+}
+.sidebar .options {
+  margin-top: 1rem;
+}
+.sidebar .options li {
+  margin-bottom: 0.5rem;
 }/*# sourceMappingURL=style.css.map */
