--- a/github-jobs/src/styles/style.scss
+++ b/github-jobs/src/styles/style.scss
@@ -15,6 +15,7 @@ $light-grey: #b7bcce;
 	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
+	color: $text;
 }
 
 button {
@@ -32,11 +33,18 @@ body {
 	margin: 0;
 	padding: 0;
 	font-family: "Poppins", sans-serif;
+	color: $text;
 }
 
 #root {
 	padding: 4rem;
 	width: 100%;
+}
+
+main {
+	display: grid;
+	grid-template-columns: 300px 1fr;
+	gap: 2rem;
 }
 
 // ===============
@@ -53,6 +61,7 @@ body {
 
 	i {
 		font-weight: bold;
+		color: $title;
 	}
 }
 
@@ -109,6 +118,53 @@ body {
 			border: none;
 			border-radius: 4px;
 			cursor: pointer;
+		}
+	}
+}
+
+// ===============
+// Sidebar
+// ===============
+
+.sidebar {
+	margin-top: 2rem;
+
+	input {
+		margin: 0 0.75rem;
+		transform: scale(1.25);
+	}
+
+	label {
+		font-size: 14px;
+		font-weight: 500;
+	}
+
+	h2 {
+		text-transform: uppercase;
+		color: $main-grey;
+		margin: 1rem 0 0.5rem 0;
+		font-size: 16px;
+	}
+
+	.full-time,
+	li {
+		@include flexCenter(row);
+		justify-content: flex-start;
+	}
+
+	.search {
+		input {
+			font-size: 15px;
+			margin: 0;
+			transform: scale(1);
+		}
+	}
+
+	.options {
+		margin-top: 1rem;
+        
+		li {
+			margin-bottom: 0.5rem;
 		}
 	}
 }
