--- a/github-jobs/src/styles/style.scss
+++ b/github-jobs/src/styles/style.scss
@@ -34,16 +34,21 @@ body {
 	padding: 0;
 	font-family: "Poppins", sans-serif;
 	color: $text;
+	background-color: #f6f7fb;
 }
 
 #root {
 	padding: 4rem;
 	width: 100%;
+
+	::placeholder {
+		color: $main-grey;
+	}
 }
 
 main {
 	display: grid;
-	grid-template-columns: 300px 1fr;
+	grid-template-columns: 379px 1fr;
 	gap: 2rem;
 }
 
@@ -87,10 +92,6 @@ main {
 		padding: 0.25rem;
 		box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
 		border-radius: 4px;
-
-		::placeholder {
-			color: $main-grey;
-		}
 
 		i {
 			color: $main-grey;
@@ -142,7 +143,7 @@ main {
 	h2 {
 		text-transform: uppercase;
 		color: $main-grey;
-		margin: 1rem 0 0.5rem 0;
+		margin: 1rem 0;
 		font-size: 16px;
 	}
 
@@ -153,16 +154,34 @@ main {
 	}
 
 	.search {
+		@include flexCenter(row);
+		justify-content: space-between;
+		gap: 1rem;
+		width: 100%;
+		background-color: #fff;
+		box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.05);
+		border-radius: 4px;
+		padding: 0 1rem;
+		height: 2.5rem;
+
 		input {
-			font-size: 15px;
+			font-size: 14.5px;
+			height: 2rem;
 			margin: 0;
 			transform: scale(1);
+			width: 100%;
+			border: none;
+
+			&:focus {
+				outline: none;
+				border: none;
+			}
 		}
 	}
 
 	.options {
-		margin-top: 1rem;
-        
+		margin-top: 1.5rem;
+
 		li {
 			margin-bottom: 0.5rem;
 		}
