--- a/github-jobs/src/styles/style.css
+++ b/github-jobs/src/styles/style.css
@@ -8,10 +8,16 @@
 button {
   all: unset;
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 i {
   font-style: normal;
+}
+
+li {
+  list-style-type: none;
 }
 
 body {
@@ -35,8 +41,9 @@ body {
 
 main {
   display: grid;
-  grid-template-columns: 379px 1fr;
+  grid-template-columns: 380px 1fr;
   gap: 2rem;
+  margin-top: 2rem;
 }
 
 .title {
@@ -102,9 +109,6 @@ main {
   cursor: pointer;
 }
 
-.sidebar {
-  margin-top: 2rem;
-}
 .sidebar input {
   margin: 0 0.75rem;
   transform: scale(1.25);
@@ -140,6 +144,7 @@ main {
   border-radius: 4px;
   padding: 0 1rem;
   height: 2.5rem;
+  font-family: "Roboto", sans-serif;
 }
 .sidebar .search input {
   font-size: 14.5px;
@@ -158,4 +163,96 @@ main {
 }
 .sidebar .options li {
   margin-bottom: 0.5rem;
+}
+
+section.jobs-container {
+  font-family: "Roboto", sans-serif;
+}
+section.jobs-container .jobs {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 1.5rem;
+  width: 100%;
+}
+section.jobs-container .jobs li {
+  background-color: #fff;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.05);
+  border-radius: 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  justify-content: flex-start;
+  gap: 1rem;
+  width: 100%;
+  padding: 1rem;
+  cursor: pointer;
+}
+section.jobs-container .jobs li:hover {
+  background-color: #e3eafd;
+}
+section.jobs-container .jobs li .img-container {
+  background: #f2f2f2;
+  width: 100px;
+  height: 90px;
+  border-radius: 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+}
+section.jobs-container .jobs li .img-container p {
+  font-size: 12px;
+  color: #bdbdbd;
+}
+section.jobs-container .jobs li .info {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+}
+section.jobs-container .jobs li .info .left {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 0.5rem;
+}
+section.jobs-container .jobs li .info .left h6 {
+  font-size: 12px;
+}
+section.jobs-container .jobs li .info .left p {
+  font-size: 18px;
+}
+section.jobs-container .jobs li .info .left button {
+  border: 1.5px solid #334680;
+  border-radius: 4px;
+  font-weight: bold;
+  font-size: 12px;
+  padding: 0.25rem 0.5rem;
+}
+section.jobs-container .jobs li .info .right {
+  align-self: flex-end;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  gap: 2rem;
+  font-size: 12.5px;
+}
+section.jobs-container .jobs li .info .right i {
+  margin-right: 0.35rem;
+}
+section.jobs-container .jobs li .info .right .location,
+section.jobs-container .jobs li .info .right .location i {
+  color: #b9bdcf;
+}
+section.jobs-container .jobs li .info .right .time,
+section.jobs-container .jobs li .info .right .time i {
+  color: #b7bcce;
 }/*# sourceMappingURL=style.css.map */
