--- a/github-jobs/src/styles/style.scss
+++ b/github-jobs/src/styles/style.scss
@@ -3,6 +3,7 @@ $text: #334680;
 $button: #1e86ff;
 $main-grey: #b9bdcf;
 $light-grey: #b7bcce;
+$light-blue:  #e3eafd;
 
 @mixin flexCenter($direction) {
 	display: flex;
@@ -21,10 +22,16 @@ $light-grey: #b7bcce;
 button {
 	all: unset;
 	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
 }
 
 i {
 	font-style: normal;
+}
+
+li {
+	list-style-type: none;
 }
 
 // general
@@ -48,8 +55,9 @@ body {
 
 main {
 	display: grid;
-	grid-template-columns: 379px 1fr;
+	grid-template-columns: 380px 1fr;
 	gap: 2rem;
+	margin-top: 2rem;
 }
 
 // ===============
@@ -128,8 +136,6 @@ main {
 // ===============
 
 .sidebar {
-	margin-top: 2rem;
-
 	input {
 		margin: 0 0.75rem;
 		transform: scale(1.25);
@@ -163,6 +169,7 @@ main {
 		border-radius: 4px;
 		padding: 0 1rem;
 		height: 2.5rem;
+		font-family: "Roboto", sans-serif;
 
 		input {
 			font-size: 14.5px;
@@ -184,6 +191,98 @@ main {
 
 		li {
 			margin-bottom: 0.5rem;
+		}
+	}
+}
+
+// ===============
+// Title
+// ===============
+
+section.jobs-container {
+	font-family: "Roboto", sans-serif;
+
+	.jobs {
+		@include flexCenter(column);
+		gap: 1.5rem;
+		width: 100%;
+
+		li {
+			background-color: #fff;
+			box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.05);
+			border-radius: 4px;
+			@include flexCenter(row);
+			justify-content: flex-start;
+			gap: 1rem;
+			width: 100%;
+			padding: 1rem;
+			cursor: pointer;
+
+			&:hover {
+				background-color:  $light-blue;
+			}
+
+			.img-container {
+				background: #f2f2f2;
+				width: 100px;
+				height: 90px;
+				border-radius: 4px;
+				@include flexCenter(row);
+
+				p {
+					font-size: 12px;
+					color: #bdbdbd;
+				}
+			}
+
+			.info {
+				@include flexCenter(row);
+				justify-content: space-between;
+				width: 100%;
+
+				.left {
+					@include flexCenter(column);
+					align-items: flex-start;
+					gap: 0.5rem;
+
+					h6 {
+						font-size: 12px;
+					}
+
+					p {
+						font-size: 18px;
+					}
+
+					button {
+						border: 1.5px solid $text;
+						border-radius: 4px;
+						font-weight: bold;
+						font-size: 12px;
+						padding: 0.25rem 0.5rem;
+					}
+				}
+
+				.right {
+					align-self: flex-end;
+					@include flexCenter(row);
+					gap: 2rem;
+					font-size: 12.5px;
+
+					i {
+						margin-right: 0.35rem;
+					}
+
+					.location,
+					.location i {
+						color: $main-grey;
+					}
+
+					.time,
+					.time i {
+						color: $light-grey;
+					}
+				}
+			}
 		}
 	}
 }
